wrenlet-sys/wren/wren-0.4.0.h


typedef struct WrenVM WrenVM;
typedef struct WrenHandle WrenHandle;
typedef void *(*WrenReallocateFn)(void *memory, size_t newSize, void *userData);
typedef void (*WrenForeignMethodFn)(WrenVM *vm);
typedef const char *(*WrenResolveModuleFn)(WrenVM *vm,
                                           const char *importer, const char *name);
struct WrenLoadModuleResult;
typedef struct WrenLoadModuleResult
{
  const char *source;
  WrenLoadModuleCompleteFn onComplete;
  void *userData;
} WrenLoadModuleResult;
typedef WrenLoadModuleResult (*WrenLoadModuleFn)(WrenVM *vm, const char *name);
typedef WrenForeignMethodFn (*WrenBindForeignMethodFn)(WrenVM *vm,
                                                       const char *module, const char *className, bool isStatic,
                                                       const char *signature);
typedef void (*WrenWriteFn)(WrenVM *vm, const char *text);
typedef enum
{
  WREN_ERROR_COMPILE,
  WREN_ERROR_RUNTIME,
  WREN_ERROR_STACK_TRACE
} WrenErrorType;
typedef void (*WrenErrorFn)(
    WrenVM *vm, WrenErrorType type, const char *module, int line,
    const char *message);
typedef struct
{
  WrenForeignMethodFn allocate;
  WrenFinalizerFn finalize;
} WrenForeignClassMethods;
typedef WrenForeignClassMethods (*WrenBindForeignClassFn)(
    WrenVM *vm, const char *module, const char *className);
typedef struct
{
  WrenReallocateFn reallocateFn;
  WrenResolveModuleFn resolveModuleFn;
  WrenLoadModuleFn loadModuleFn;
  WrenBindForeignMethodFn bindForeignMethodFn;
  WrenBindForeignClassFn bindForeignClassFn;
  WrenWriteFn writeFn;
  WrenErrorFn errorFn;
  size_t initialHeapSize;
  size_t minHeapSize;
  int heapGrowthPercent;
  void *userData;
} WrenConfiguration;
typedef enum
{
  WREN_RESULT_SUCCESS,
  WREN_RESULT_COMPILE_ERROR,
  WREN_RESULT_RUNTIME_ERROR
} WrenInterpretResult;
typedef enum
{
  WREN_TYPE_BOOL,
  WREN_TYPE_NUM,
  WREN_TYPE_FOREIGN,
  WREN_TYPE_LIST,
  WREN_TYPE_MAP,
  WREN_TYPE_NULL,
  WREN_TYPE_STRING,
  WREN_TYPE_UNKNOWN
} WrenType;
WREN_API int wrenGetVersionNumber();
WREN_API void wrenInitConfiguration(WrenConfiguration *configuration);
WREN_API WrenVM *wrenNewVM(WrenConfiguration *configuration);
WREN_API void wrenFreeVM(WrenVM *vm);
WREN_API void wrenCollectGarbage(WrenVM *vm);
WREN_API WrenInterpretResult wrenInterpret(WrenVM *vm, const char *module,
                                           const char *source);
WREN_API WrenHandle *wrenMakeCallHandle(WrenVM *vm, const char *signature);
WREN_API WrenInterpretResult wrenCall(WrenVM *vm, WrenHandle *method);
WREN_API void wrenReleaseHandle(WrenVM *vm, WrenHandle *handle);
WREN_API int wrenGetSlotCount(WrenVM *vm);
WREN_API void wrenEnsureSlots(WrenVM *vm, int numSlots);
WREN_API WrenType wrenGetSlotType(WrenVM *vm, int slot);