wrenlet-sys/src/wren040.rs


#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WrenConfiguration {
    /// The callback Wren will use to allocate, reallocate, and deallocate memory.
    ///
    /// If `NULL`, defaults to a built-in function that uses `realloc` and `free`.
    pub reallocateFn: WrenReallocateFn,
    /// The callback Wren uses to resolve a module name.
    ///
    /// Some host applications may wish to support "relative" imports, where the
    /// meaning of an import string depends on the module that contains it. To
    /// support that without baking any policy into Wren itself, the VM gives the
    /// host a chance to resolve an import string.
    ///
    /// Before an import is loaded, it calls this, passing in the name of the
    /// module that contains the import and the import string. The host app can
    /// look at both of those and produce a new "canonical" string that uniquely
    /// identifies the module. This string is then used as the name of the module
    /// going forward. It is what is passed to [loadModuleFn], how duplicate
    /// imports of the same module are detected, and how the module is reported in
    /// stack traces.
    ///
    /// If you leave this function NULL, then the original import string is
    /// treated as the resolved string.
    ///
    /// If an import cannot be resolved by the embedder, it should return NULL and
    /// Wren will report that as a runtime error.
    ///
    /// Wren will take ownership of the string you return and free it for you, so
    /// it should be allocated using the same allocation function you provide
    /// above.
    pub resolveModuleFn: WrenResolveModuleFn,
    /// The callback Wren uses to load a module.
    ///
    /// Since Wren does not talk directly to the file system, it relies on the
    /// embedder to physically locate and read the source code for a module. The
    /// first time an import appears, Wren will call this and pass in the name of
    /// the module being imported. The method will return a result, which contains
    /// the source code for that module. Memory for the source is owned by the
    /// host application, and can be freed using the onComplete callback.
    ///
    /// This will only be called once for any given module name. Wren caches the
    /// result internally so subsequent imports of the same module will use the
    /// previous source and not call this.
    ///
    /// If a module with the given name could not be found by the embedder, it
    /// should return NULL and Wren will report that as a runtime error.
    pub loadModuleFn: WrenLoadModuleFn,
    /// The callback Wren uses to find a foreign method and bind it to a class.
    ///
    /// When a foreign method is declared in a class, this will be called with the
    /// foreign method's module, class, and signature when the class body is
    /// executed. It should return a pointer to the foreign function that will be
    /// bound to that method.
    ///
    /// If the foreign function could not be found, this should return NULL and
    /// Wren will report it as runtime error.
    pub bindForeignMethodFn: WrenBindForeignMethodFn,
    /// The callback Wren uses to find a foreign class and get its foreign methods.
    ///
    /// When a foreign class is declared, this will be called with the class's
    /// module and name when the class body is executed. It should return the
    /// foreign functions uses to allocate and (optionally) finalize the bytes
    /// stored in the foreign object when an instance is created.
    pub bindForeignClassFn: WrenBindForeignClassFn,
    /// The callback Wren uses to display text when `System.print()` or the other
    /// related functions are called.
    ///
    /// If this is `NULL`, Wren discards any printed text.
    pub writeFn: WrenWriteFn,
    /// The callback Wren uses to report errors.
    ///
    /// When an error occurs, this will be called with the module name, line
    /// number, and an error message. If this is `NULL`, Wren doesn't report any
    /// errors.
    pub errorFn: WrenErrorFn,
    /// The number of bytes Wren will allocate before triggering the first garbage
    /// collection.
    ///
    /// If zero, defaults to 10MB.
    pub initialHeapSize: usize,
    /// After a collection occurs, the threshold for the next collection is
    /// determined based on the number of bytes remaining in use. This allows Wren
    /// to shrink its memory usage automatically after reclaiming a large amount
    /// of memory.
    ///
    /// This can be used to ensure that the heap does not get too small, which can
    /// in turn lead to a large number of collections afterwards as the heap grows
    /// back to a usable size.
    ///
    /// If zero, defaults to 1MB.
    pub minHeapSize: usize,
    /// Wren will resize the heap automatically as the number of bytes
    /// remaining in use after a collection changes. This number determines the
    /// amount of additional memory Wren will use after a collection, as a
    /// percentage of the current heap size.
    ///
    /// For example, say that this is 50. After a garbage collection, when there
    /// are 400 bytes of memory still in use, the next collection will be triggered
    /// after a total of 600 bytes are allocated (including the 400 already in
    /// use.)
    ///
    /// Setting this to a smaller number wastes less memory, but triggers more
    /// frequent garbage collections.
    ///
    /// If zero, defaults to 50.
    pub heapGrowthPercent: ::core::ffi::c_int,
    /// User-defined data associated with the VM.
    pub userData: *mut ::core::ffi::c_void,
}

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of WrenConfiguration"][::core::mem::size_of::<WrenConfiguration>() - 88usize];
    ["Alignment of WrenConfiguration"][::core::mem::align_of::<WrenConfiguration>() - 8usize];
    ["Offset of field: WrenConfiguration::reallocateFn"]
        [::core::mem::offset_of!(WrenConfiguration, reallocateFn) - 0usize];
    ["Offset of field: WrenConfiguration::resolveModuleFn"]
        [::core::mem::offset_of!(WrenConfiguration, resolveModuleFn) - 8usize];
    ["Offset of field: WrenConfiguration::loadModuleFn"]
        [::core::mem::offset_of!(WrenConfiguration, loadModuleFn) - 16usize];
    ["Offset of field: WrenConfiguration::bindForeignMethodFn"]
        [::core::mem::offset_of!(WrenConfiguration, bindForeignMethodFn) - 24usize];
    ["Offset of field: WrenConfiguration::bindForeignClassFn"]
        [::core::mem::offset_of!(WrenConfiguration, bindForeignClassFn) - 32usize];
    ["Offset of field: WrenConfiguration::writeFn"]
        [::core::mem::offset_of!(WrenConfiguration, writeFn) - 40usize];
    ["Offset of field: WrenConfiguration::errorFn"]
        [::core::mem::offset_of!(WrenConfiguration, errorFn) - 48usize];
    ["Offset of field: WrenConfiguration::initialHeapSize"]
        [::core::mem::offset_of!(WrenConfiguration, initialHeapSize) - 56usize];
    ["Offset of field: WrenConfiguration::minHeapSize"]
        [::core::mem::offset_of!(WrenConfiguration, minHeapSize) - 64usize];
    ["Offset of field: WrenConfiguration::heapGrowthPercent"]
        [::core::mem::offset_of!(WrenConfiguration, heapGrowthPercent) - 72usize];
    ["Offset of field: WrenConfiguration::userData"]
        [::core::mem::offset_of!(WrenConfiguration, userData) - 80usize];
};

impl WrenInterpretResult {
    pub const WREN_RESULT_SUCCESS: WrenInterpretResult = WrenInterpretResult(0);
    pub const WREN_RESULT_COMPILE_ERROR: WrenInterpretResult = WrenInterpretResult(1);
    pub const WREN_RESULT_RUNTIME_ERROR: WrenInterpretResult = WrenInterpretResult(2);
}

#[repr(transparent)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub struct WrenInterpretResult(pub ::core::ffi::c_uint);

impl WrenType {
    pub const WREN_TYPE_BOOL: WrenType = WrenType(0);
    pub const WREN_TYPE_NUM: WrenType = WrenType(1);
    pub const WREN_TYPE_FOREIGN: WrenType = WrenType(2);
    pub const WREN_TYPE_LIST: WrenType = WrenType(3);
    pub const WREN_TYPE_MAP: WrenType = WrenType(4);
    pub const WREN_TYPE_NULL: WrenType = WrenType(5);
    pub const WREN_TYPE_STRING: WrenType = WrenType(6);

    /// The object is of a type that isn't accessible by the C API.
    pub const WREN_TYPE_UNKNOWN: WrenType = WrenType(7);
}

/// The type of an object stored in a slot.
///
/// This is not necessarily the object's *class*, but instead its low level
/// representation type.
#[repr(transparent)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub struct WrenType(pub ::core::ffi::c_uint);

unsafe extern "C" {
    /// Get the current wren version number.
    ///
    /// Can be used to range checks over versions.
    pub fn wrenGetVersionNumber() -> ::core::ffi::c_int;

    /// Initializes `configuration` with all of its default values.
    ///
    /// Call this before setting the particular fields you care about.
    pub fn wrenInitConfiguration(configuration: *mut WrenConfiguration);

    /// Creates a new Wren virtual machine using the given `configuration`. Wren
    /// will copy the configuration data, so the argument passed to this can be
    /// freed after calling this. If `configuration` is `NULL`, uses a default
    /// configuration.
    pub fn wrenNewVM(configuration: *mut WrenConfiguration) -> *mut WrenVM;

    /// Disposes of all resources is use by `vm`, which was previously created by a
    /// call to [`wrenNewVM`].
    pub fn wrenFreeVM(vm: *mut WrenVM);

    /// Immediately run the garbage collector to free unused memory.
    pub fn wrenCollectGarbage(vm: *mut WrenVM);

    /// Runs `source`, a string of Wren source code in a new fiber in `vm` in the
    /// context of resolved `module`.
    pub fn wrenInterpret(
        vm: *mut WrenVM,
        module: *const ::core::ffi::c_char,
        source: *const ::core::ffi::c_char,
    ) -> WrenInterpretResult;

    /// Creates a handle that can be used to invoke a method with `signature` on
    /// using a receiver and arguments that are set up on the stack.
    ///
    /// This handle can be used repeatedly to directly invoke that method from C
    /// code using [`wrenCall`].
    ///
    /// When you are done with this handle, it must be released using
    /// [`wrenReleaseHandle`].
    pub fn wrenMakeCallHandle(
        vm: *mut WrenVM,
        signature: *const ::core::ffi::c_char,
    ) -> *mut WrenHandle;

    /// Calls `method`, using the receiver and arguments previously set up on the
    /// stack.
    ///
    /// `method` must have been created by a call to [`wrenMakeCallHandle`]. The
    /// arguments to the method must be already on the stack. The receiver should be
    /// in slot 0 with the remaining arguments following it, in order. It is an
    /// error if the number of arguments provided does not match the method's
    /// signature.
    ///
    /// After this returns, you can access the return value from slot 0 on the stack.
    pub fn wrenCall(vm: *mut WrenVM, method: *mut WrenHandle) -> WrenInterpretResult;

    /// Releases the reference stored in `handle`. After calling this, `handle` can
    /// no longer be used.
    pub fn wrenReleaseHandle(vm: *mut WrenVM, handle: *mut WrenHandle);

    /// Returns the number of slots available to the current foreign method.
    pub fn wrenGetSlotCount(vm: *mut WrenVM) -> ::core::ffi::c_int;

    /// Ensures that the foreign method stack has at least `numSlots` available for
    /// use, growing the stack if needed.
    ///
    /// Does not shrink the stack if it has more than enough slots.
    ///
    /// It is an error to call this from a finalizer.
    pub fn wrenEnsureSlots(vm: *mut WrenVM, numSlots: ::core::ffi::c_int);

    /// Gets the type of the object in `slot`.
    pub fn wrenGetSlotType(vm: *mut WrenVM, slot: ::core::ffi::c_int) -> WrenType;
